[project]
name = "lora-merge-experimental"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/hybskgks28275/ComfyUI-LoRA-Merge-EXPERIMENTAL"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hybskgks28275"
DisplayName = "ComfyUI-LoRA-Merge-EXPERIMENTAL"
Icon = ""
